--- a/pre-processing.ipynb
+++ b/pre-processing.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +237,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Inference:**  \n",
+    "The output displays each word and punctuation mark as a separate token. This allows us to analyze the structure and content of the text at the word level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Removing Stopwords\n",
     "\n",
     "**Stopwords** are common words (like \"the\", \"is\", \"and\") that usually do not add significant meaning to text analysis. Removing them helps focus on meaningful words.\n",
@@ -246,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,6 +275,14 @@
     "    return tokens_without_stopwords\n",
     "\n",
     "print(\"Tokens without stopwords:\", remove_stopwords(text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "The result contains only the meaningful words, with common stopwords removed. This helps focus analysis on the most relevant terms in the text."
    ]
   },
   {
@@ -303,6 +319,14 @@
     "    return lemmatized_tokens\n",
     "lemmatized_tokens = lemmatize_text(text)\n",
     "print(\"Lemmatized tokens:\", lemmatized_tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "Each word is reduced to its base form (lemma), which standardizes variations and improves the accuracy of further text analysis."
    ]
   },
   {
@@ -346,6 +370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Inference:**  \n",
+    "The output lists each sentence found in the text. This segmentation allows us to analyze text structure, readability, and perform sentence-level operations such as sentiment analysis or topic detection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Named Entity Recognition (NER)\n",
     "\n",
     "**Named Entity Recognition** identifies and classifies key entities in text, such as people, organizations, and locations.\n",
@@ -383,6 +415,14 @@
     "    return entities\n",
     "entities = extract_named_entities(text_NER)\n",
     "print(\"Named Entities:\", entities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "The output lists the named entities found in the text, such as people, organizations, and locations. This is useful for extracting key actors and places from documents."
    ]
   },
   {
@@ -439,6 +479,14 @@
     "\n",
     "keywords = extract_keywords_tfidf(texts)\n",
     "print(\"TF-IDF Keywords:\", keywords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "The result shows the most important keywords and phrases identified by TF-IDF across the provided documents. These keywords represent distinctive themes and help summarize the main topics present in the text collection."
    ]
   },
   {
@@ -506,6 +554,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Inference:**  \n",
+    "The sentiment score and lists of positive/negative words indicate the overall emotional tone of the text, which can be used to gauge public opinion or feedback."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 10. Text Statistics\n",
     "\n",
     "**Text statistics** provide quantitative measures of text complexity and structure, such as word count, sentence count, and lexical diversity.\n",
@@ -560,6 +616,14 @@
     "    }\n",
     "stats = get_text_statistics(text)\n",
     "print(\"Text Statistics:\", stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "The statistics provide a quantitative overview of the text, including word and sentence counts, average lengths, vocabulary richness, and part-of-speech distribution. These metrics are useful for comparing documents, assessing complexity, and understanding linguistic characteristics."
    ]
   },
   {
@@ -643,6 +707,14 @@
     "# Compare vocabulary usage between the two texts\n",
     "comparison_result = compare_texts_vocabulary(text1, text2)\n",
     "print(\"Vocabulary Comparison:\", comparison_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference:**  \n",
+    "The comparison highlights common and unique words between two texts, helping us understand similarities and differences in language use."
    ]
   },
   {
