--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -94,71 +94,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install -r requirements.txt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: spacy in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (3.8.7)\n",
-      "Requirement already satisfied: scikit-learn in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (1.5.2)\n",
-      "Requirement already satisfied: numpy in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from -r requirements.txt (line 3)) (1.24.3)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (3.0.12)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (1.0.5)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (1.0.13)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (2.0.11)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (3.0.10)\n",
-      "Requirement already satisfied: thinc<8.4.0,>=8.3.4 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (8.3.4)\n",
-      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (1.1.3)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (2.5.1)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (2.0.10)\n",
-      "Requirement already satisfied: weasel<0.5.0,>=0.1.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (0.4.1)\n",
-      "Requirement already satisfied: typer<1.0.0,>=0.3.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (0.16.0)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (4.67.1)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (2.32.3)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (2.11.7)\n",
-      "Requirement already satisfied: jinja2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (3.1.4)\n",
-      "Requirement already satisfied: setuptools in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (72.1.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (24.2)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from spacy->-r requirements.txt (line 1)) (3.5.0)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 2)) (1.12.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 2)) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 2)) (3.5.0)\n",
-      "Requirement already satisfied: language-data>=1.2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from langcodes<4.0.0,>=3.2.0->spacy->-r requirements.txt (line 1)) (1.3.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy->-r requirements.txt (line 1)) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.33.2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy->-r requirements.txt (line 1)) (2.33.2)\n",
-      "Requirement already satisfied: typing-extensions>=4.12.2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy->-r requirements.txt (line 1)) (4.12.2)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy->-r requirements.txt (line 1)) (0.4.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy->-r requirements.txt (line 1)) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy->-r requirements.txt (line 1)) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy->-r requirements.txt (line 1)) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy->-r requirements.txt (line 1)) (2024.12.14)\n",
-      "Requirement already satisfied: blis<1.3.0,>=1.2.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from thinc<8.4.0,>=8.3.4->spacy->-r requirements.txt (line 1)) (1.2.1)\n",
-      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from thinc<8.4.0,>=8.3.4->spacy->-r requirements.txt (line 1)) (0.1.5)\n",
-      "Requirement already satisfied: click>=8.0.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (8.2.1)\n",
-      "Requirement already satisfied: shellingham>=1.3.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (1.5.4)\n",
-      "Requirement already satisfied: rich>=10.11.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (13.9.4)\n",
-      "Requirement already satisfied: cloudpathlib<1.0.0,>=0.7.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from weasel<0.5.0,>=0.1.0->spacy->-r requirements.txt (line 1)) (0.21.1)\n",
-      "Requirement already satisfied: smart-open<8.0.0,>=5.2.1 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from weasel<0.5.0,>=0.1.0->spacy->-r requirements.txt (line 1)) (7.3.0.post1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from jinja2->spacy->-r requirements.txt (line 1)) (2.1.3)\n",
-      "Requirement already satisfied: marisa-trie>=1.1.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy->-r requirements.txt (line 1)) (1.2.1)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (2.15.1)\n",
-      "Requirement already satisfied: wrapt in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.1.0->spacy->-r requirements.txt (line 1)) (1.17.2)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /Users/shyam/miniconda/envs/uni/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy->-r requirements.txt (line 1)) (0.1.2)\n"
+      "Model 'en_core_news_sm' not found. Downloading...\n",
+      "Collecting en-core-web-sm==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m89.5 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: en-core-web-sm\n",
+      "Successfully installed en-core-web-sm-3.8.0\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n"
      ]
     }
    ],
-   "source": [
-    "!pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import spacy\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -179,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -408,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF Keywords: [('learning', 0.22222222222222224), ('language', 0.20100756305184245), ('analytic', 0.13608276348795434), ('large', 0.13608276348795434), ('large volume', 0.13608276348795434), ('text', 0.13608276348795434), ('text analytic', 0.13608276348795434), ('volume', 0.13608276348795434), ('intelligence', 0.11111111111111112), ('learning deep', 0.11111111111111112), ('learning important', 0.11111111111111112), ('machine', 0.11111111111111112), ('machine learning', 0.11111111111111112), ('language processing', 0.10050378152592122), ('natural', 0.10050378152592122), ('natural language', 0.10050378152592122), ('processing', 0.10050378152592122), ('processing enable', 0.10050378152592122), ('understand', 0.10050378152592122), ('understand human', 0.10050378152592122)]\n"
+      "TF-IDF Keywords: [('learning', np.float64(0.22222222222222224)), ('language', np.float64(0.21081851067789195)), ('analytic', np.float64(0.12598815766974242)), ('analytic help', np.float64(0.12598815766974242)), ('datum', np.float64(0.12598815766974242)), ('extract', np.float64(0.12598815766974242)), ('extract insight', np.float64(0.12598815766974242)), ('help', np.float64(0.12598815766974242)), ('help extract', np.float64(0.12598815766974242)), ('artificial', np.float64(0.11111111111111112)), ('artificial intelligence', np.float64(0.11111111111111112)), ('deep', np.float64(0.11111111111111112)), ('deep learning', np.float64(0.11111111111111112)), ('important artificial', np.float64(0.11111111111111112)), ('computer', np.float64(0.10540925533894598)), ('computer understand', np.float64(0.10540925533894598)), ('enable', np.float64(0.10540925533894598)), ('enable computer', np.float64(0.10540925533894598)), ('human', np.float64(0.10540925533894598)), ('human language', np.float64(0.10540925533894598))]\n"
      ]
     }
    ],
@@ -450,15 +412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TF-IDF Keywords (Raw Text): [('and', 0.32883558900175286), ('language', 0.3110039837944526), ('data', 0.2880384333605476), ('text', 0.2880384333605476), ('learning', 0.24782896832835802), ('learning models', 0.17803112498119444), ('models', 0.17803112498119444), ('learning are', 0.1478341860014219), ('machine', 0.1478341860014219), ('machine learning', 0.1478341860014219)]\n",
-      "TF-IDF Keywords (Lemmatized Text): [('language', 0.4124189628885659), ('learning', 0.2784754321986805), ('learning model', 0.226972853466228), ('datum', 0.22575685555911473), ('text', 0.22575685555911473), ('language processing', 0.1576542605386584), ('large', 0.1391888746260641), ('large volume', 0.1391888746260641), ('learning important', 0.1391888746260641), ('machine', 0.1391888746260641)]\n"
+      "TF-IDF Keywords (Raw Text): [('and', np.float64(0.32883558900175286)), ('language', np.float64(0.3110039837944526)), ('data', np.float64(0.2880384333605476)), ('text', np.float64(0.2880384333605476)), ('learning', np.float64(0.24782896832835802)), ('analyzing', np.float64(0.17803112498119444)), ('analyzing and', np.float64(0.17803112498119444)), ('analytics', np.float64(0.1478341860014219)), ('are', np.float64(0.1478341860014219)), ('are important', np.float64(0.1478341860014219))]\n",
+      "TF-IDF Keywords (Lemmatized Text): [('language', np.float64(0.3514358250531011)), ('datum', np.float64(0.273184638335945)), ('text', np.float64(0.273184638335945)), ('learning', np.float64(0.264920077140046)), ('analytic', np.float64(0.2015507094351037)), ('computer', np.float64(0.1576542605386584)), ('analyze', np.float64(0.14678735574378285)), ('complex', np.float64(0.14678735574378285)), ('complex language', np.float64(0.14678735574378285)), ('comprehend complex', np.float64(0.14678735574378285))]\n"
      ]
     }
    ],
@@ -515,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -589,15 +551,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary Comparison: {'common_words': {}, 'unique_to_text1': {'language': 2, 'human': 1, 'understand': 1, 'processing': 1, 'computer': 1, 'enable': 1, 'natural': 1}, 'unique_to_text2': {'learning': 2, 'deep': 1, 'machine': 1, 'artificial': 1, 'important': 1, 'intelligence': 1}, 'similarity_score': 0.0}\n",
-      "Vocabulary Comparison: {'common_words': {'human': {'text1_freq': 1, 'text2_freq': 1}, 'text': {'text1_freq': 1, 'text2_freq': 1}, 'processing': {'text1_freq': 1, 'text2_freq': 1}, 'natural': {'text1_freq': 1, 'text2_freq': 1}, 'language': {'text1_freq': 2, 'text2_freq': 2}}, 'unique_to_text1': {'help': 1, 'understand': 1, 'analyze': 1, 'datum': 1, 'computer': 1, 'efficiently': 1}, 'unique_to_text2': {'machine': 1, 'quickly': 1, 'comprehend': 1, 'process': 1, 'enable': 1, 'analytic': 1}, 'similarity_score': 29.41}\n"
+      "Vocabulary Comparison: {'common_words': {}, 'unique_to_text1': {'language': 2, 'computer': 1, 'processing': 1, 'human': 1, 'understand': 1, 'enable': 1, 'natural': 1}, 'unique_to_text2': {'learning': 2, 'machine': 1, 'artificial': 1, 'intelligence': 1, 'important': 1, 'deep': 1}, 'similarity_score': 0.0}\n",
+      "Vocabulary Comparison: {'common_words': {'language': {'text1_freq': 2, 'text2_freq': 2}, 'processing': {'text1_freq': 1, 'text2_freq': 1}, 'text': {'text1_freq': 1, 'text2_freq': 1}, 'human': {'text1_freq': 1, 'text2_freq': 1}, 'natural': {'text1_freq': 1, 'text2_freq': 1}}, 'unique_to_text1': {'efficiently': 1, 'understand': 1, 'computer': 1, 'help': 1, 'analyze': 1, 'datum': 1}, 'unique_to_text2': {'analytic': 1, 'machine': 1, 'process': 1, 'comprehend': 1, 'enable': 1, 'quickly': 1}, 'similarity_score': 29.41}\n"
      ]
     }
    ],
@@ -639,11 +601,18 @@
     "\n",
     "Feel free to experiment further with your own texts and datasets. Text pre-processing is a powerful tool—use it to make your NLP workflows more effective and"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uni",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -657,9 +626,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
